2010-12-01 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am:
	Distribute admon-* icons with html docs	(workaround for #636175).

2010-11-30 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am: Only rebuild manuals when needed.

	* src/plugin-menu/nautilus-actions.c (create_menu_item):
	Set a unique name per target menu so that icons are displayed even
	when both toolbar and location context menu are targeted.

2010-11-25 Pierre Wieser <pwieser@trychlos.org>

	Add %o/%O no-op parameters.

	* doc/nact/C/figures/nact-legend.png: Update legend screenshot.
	* doc/nact/C/nact-execution.xml: Update parameters description.

	* src/core/na-object-profile-factory.c:
	* src/core/na-tokens.h: Update comments.

	* src/core/na-tokens.c
	(is_singular_exec, parse_singular): Update with new parameters.

	* src/nact/nautilus-actions-config-tool.ui:
	Update legend dialog.

2010-11-24 Pierre Wieser <pwieser@trychlos.org>

	* doc/des-ema/des-ema-0.12:
	* doc/des-ema/des-ema-0.13:
	* doc/des-ema/des-ema-0.14:
	* doc/des-ema/des-ema-0.15: New files.

	* doc/nact/Makefile.am:
	Do not distribute non translated figures in xx/ subdirectories.

2010-11-23 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/C/nact-starting.xml:
	Work-around in order to be able to build sl pdf.

	* doc/nact/Makefile.am:
	Include non-translated figures in translated pdf.

2010-11-22 Pierre Wieser <pwieser@trychlos.org>

	* doc/nact/Makefile.am:
	Be tolerant about not buildable pdf.

	* po/POTFILES.in:
	Fix #635521: translatable sentences of the *.ui files don't appear in .po file.

	* run-autogen.sh:
	Clean up aborted make distcheck before running autogen.

	* doc/nact/C/nact-execution.xml:
	Fix typo in NACT user's manual.

	* src/core/na-icontext-factory.c:
	Fix #632992: add comment about default value translation.

2010-09-23 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Pre-release version bump.

	* doc/api/Makefile.am: Fix the warning when overriding GTKDOC_RUN.
