@@ -141,7 +141,9 @@ log_handler( const gchar *log_domain, GLogLevelFlags log_level, const gchar *mes
 	/*( *st_default_log_func )( log_domain, log_level, message, user_data );*/
 	syslog( LOG_USER | LOG_DEBUG, "%s%s", tmp, message );
 #else
-	/* do nothing */
+	if( g_getenv( NAUTILUS_ACTIONS_DEBUG )){
+		syslog( LOG_USER | LOG_DEBUG, "%s%s", tmp, message );
+	}
 #endif
 
 	g_free( tmp );
